//protoc -I . *.proto --go_out=plugins=grpc:.
syntax = "proto2";
package server;
import "common.proto";

service Coordinator {
    rpc OpenTransaction (Empty) returns (Transaction) {};
    rpc CloseTransaction(Transaction) returns (Feedback) {};
    rpc AskCommitTransaction(Transaction) returns (Feedback) {};
    rpc AskAbortTransaction(Transaction) returns (Feedback) {};
    rpc TryLock(TryLockParam) returns (Feedback) {}; //use feedback to indicate if we proceed or abort the transaction
    rpc ReportUnlock(ReportUnLockParam) returns (Empty){};
}

message TryLockParam {
    required string transactionID = 1;
    required string server_identifier = 2;
    required string object = 3;
    required string lockType = 4;
}

message ReportUnLockParam {
    required string transactionID = 1;
    required string server_identifier = 2;
    required string object = 3;
    required string lockType = 4;
}